--- a/06 - SoundCore/soundcore/templates/left-sidebar.html
+++ b/06 - SoundCore/soundcore/templates/left-sidebar.html
@@ -2,7 +2,7 @@
 <style>
     .left-menu {
         background-color: #161616;
-        height: 100vh;
+        height: 100%
     }
 
     .icon_box {
