Set Fixed size for footer_left_item

--- a/06 - SoundCore/soundcore/soundcore/templates/soundcore/index.html
+++ b/06 - SoundCore/soundcore/soundcore/templates/soundcore/index.html
@@ -357,7 +357,7 @@
     </div>
     <footer class="footer_item" style="	transform: translateY(8px);">
         <div class="columns is-mobile footer_column">
-            <div class="column footer_info_column  is-narrow">
+            <div class="column footer_info_column  is-4">
                 <article class="media">
                     <figure class="media-left">
                         <p class="image is-64x64">
